--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 <body>
     <div class="main">
+        <img class="avatar" src="https://sakurai.in/images/avatar.jpg">
+
         <h1>Sakurai Kaede</h1>
 
-        <p>Loving the World.</p>
-
-        <p><a href="https://sakurai.in" style="color:HotPink;">Blog</a> <a href="https://t.me/sakurai_kaede" style="color:HotPink;">Telegram</a> <a href="/gpg/" style="color:HotPink;">GnuPG Key</a></p>
+        <p>Hope you can be young forever.</p>
+        <div class="list">
+            <h4><a href="https://sakurai.in">Blog:sakurai.in</a></h4>
+            <h4><a href="https://t.me/sakurai_kaede">Telegram:@sakurai_kaede</a></h4>
+            <h4><a href="/gpg/">GnuPG Key:9EC8 15BB 7174 B081</a></h4>
+            <h4><a href="https://github.com/sakuraikaede">Github:sakuraikaede</a></h4>
+            <h4><a href="https://twitter.com/5akurai_kaede">Twitter:@5akurai_kaede</a></h4>
+        </div>
     </div>
 </body>
 </html>
