Change some texts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1>Sakurai Kaede</h1>
 
-        <p>Hope you can be young forever.</p>
+        <p>Wish you can be young forever.</p>
         <div class="list">
             <h4><a href="https://sakurai.in">Blog:sakurai.in</a></h4>
             <h4><a href="https://t.me/sakurai_kaede">Telegram:@sakurai_kaede</a></h4>
