Changed some texts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="list">
             <h4><a href="https://sakurai.in">Blog:sakurai.in</a></h4>
             <h4><a href="https://t.me/sakurai_kaede">Telegram:@sakurai_kaede</a></h4>
-            <h4><a href="/gpg/">GnuPG Key:9EC8 15BB 7174 B081</a></h4>
+            <h4><a href="/openpgp/">OpenPGP Key:9EC8 15BB 7174 B081</a></h4>
             <h4><a href="https://github.com/sakuraikaede">Github:sakuraikaede</a></h4>
             <h4><a href="https://twitter.com/5akurai_kaede">Twitter:@5akurai_kaede</a></h4>
         </div>
