Changed some texts

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 <body>
     <div class="main">
         <img class="avatar" src="https://sakurai.in/images/avatar.jpg">
-
         <h1>Sakurai Kaede</h1>
-
-        <p>Wish you can be young forever.</p>
+        <p class="slogan">Wish you can be young forever.</p>
         <div class="list">
-            <h4><a href="https://sakurai.in">Blog:sakurai.in</a></h4>
-            <h4><a href="https://t.me/sakurai_kaede">Telegram:@sakurai_kaede</a></h4>
-            <h4><a href="/openpgp/">OpenPGP Key:9EC8 15BB 7174 B081</a></h4>
-            <h4><a href="https://github.com/sakuraikaede">Github:sakuraikaede</a></h4>
-            <h4><a href="https://twitter.com/5akurai_kaede">Twitter:@5akurai_kaede</a></h4>
+            <p><a href="https://sakurai.in">Blog:sakurai.in</a><br>
+            <a href="https://t.me/sakurai_kaede">Telegram:@sakurai_kaede</a><br>
+            <a href="/openpgp/">OpenPGP Key:9EC8 15BB 7174 B081</a><br>
+            <a href="https://github.com/sakuraikaede">Github:sakuraikaede</a><br>
+            <a href="https://twitter.com/5akurai_kaede">Twitter:@5akurai_kaede</a></p>
         </div>
     </div>
 </body>
