--- a/openpgp/index.html
+++ b/openpgp/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/openpgp.css">
     <title>GPG Key of Sakurai Kaede</title>
 </head>
 <body>
     <div class="main">
         <h1>OpenPGP Key of Sakurai Kaede</h1>
-
-        <p>If you are using GnuPG:<br><code>gpg --keyserver hkps://keys.openpgp.org --recv-keys 9EC815BB7174B081</code></p>
+        
+        <br>
 
         <p>Key-ID: <code>9EC8 15BB 7174 B081</code></p>
 
         <p>Fingerprint:<br><code>0BF7 21C0 395D AAE1 6E9B 0E70 9EC8 15BB 7174 B081</code></p>
 
-        <p><a href="../" style="color: hotpink;">Back to Main Page</a></p>
+        <br>
+
+        <a href="../" style="color: hotpink;font-size: 20px;">Back to Main Page</a>
 </body>
 </html>
