--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <img class="avatar" src="https://sakurai.in/images/avatar.jpg">
         <h1>Sakurai Kaede</h1>
         <p class="slogan">Wish you can be young forever.</p>
-        <div class="list">
-            <p><a href="https://sakurai.in">Blog:sakurai.in</a><br>
-            <a href="https://t.me/sakurai_kaede">Telegram:@sakurai_kaede</a><br>
-            <a href="/openpgp/">OpenPGP Key:9EC8 15BB 7174 B081</a><br>
-            <a href="https://github.com/sakuraikaede">Github:sakuraikaede</a><br>
-            <a href="https://twitter.com/5akurai_kaede">Twitter:@5akurai_kaede</a></p>
+        <br>
+        <div class="button">
+            <input type="button" value="Blog" onclick="document.location='https://sakurai.in'" style="width:120px;height:45px;border: pink 2px solid;background-color:pink;margin: 5px;">
+            <input type="button" value="About me" onclick="document.location='/about/'" style="width:120px;height:45px;border: pink 2px solid;background-color:pink;margin: 5px;">
+            <input type="button" value="OpenPGP Key" onclick="document.location='/openpgp/'" style="width:120px;height:45px;border: pink 2px solid;background-color:pink;margin: 5px;">
         </div>
+        <br>
+        <a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20216655" target="_blank"> 20216655号</a>
     </div>
 </body>
 </html>
