--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main">
-        <h1>✨About Sakurai Kaede✨</h1>
+        <h1 class="title">✨About Sakurai Kaede✨</h1>
         <div class="list">
             <ul>
                <li>📜 A High School Freshman</li>
