--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">       
+    <link rel="stylesheet" type="text/css" href="/css/style.css">     
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Sakurai Kaede's Personal Page</title>
 </head>
 <body>
     <div class="main">
-        <img class="avatar" src="https://sakurai.in/images/avatar.jpg">
+        <img class="avatar" title="Pixiv Content ID:58835009" src="avatar.jpg">
         <h1>Sakurai Kaede</h1>
         <p class="slogan">Wish you can be young forever.</p>
         <br>
         <div class="button">
-            <input type="button" value="Blog" onclick="document.location='https://sakurai.in'" style="width:120px;height:45px;border: pink 2px solid;background-color:pink;margin: 5px;">
-            <input type="button" value="About me" onclick="document.location='/about/'" style="width:120px;height:45px;border: pink 2px solid;background-color:pink;margin: 5px;">
-            <input type="button" value="OpenPGP Key" onclick="document.location='/openpgp/'" style="width:120px;height:45px;border: pink 2px solid;background-color:pink;margin: 5px;">
+            <a href="https://sakurai.in">Blog</a>
+            <a href="/about/">About me</a>
+            <a href="/openpgp/">OpenPGP Key</a>
         </div>
         <br>
         <a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20216655" target="_blank"> 20216655号</a>
