--- a/openpgp/index.html
+++ b/openpgp/index.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/openpgp.css">
-    <title>GPG Key of Sakurai Kaede</title>
+    <title>OpenPGP Key of Sakurai Kaede</title>
 </head>
 <body>
     <div class="main">
         <h1>OpenPGP Key of Sakurai Kaede</h1>
-        
         <br>
+        <p>If you are using GnuPG:<br><code>gpg --keyserver hkps://keys.openpgp.org --recv-keys 9EC815BB7174B081</code></p>
 
         <p>Key-ID: <code>9EC8 15BB 7174 B081</code></p>
-
         <p>Fingerprint:<br><code>0BF7 21C0 395D AAE1 6E9B 0E70 9EC8 15BB 7174 B081</code></p>
-
         <br>
-
         <a href="../" style="color: hotpink;font-size: 20px;">Back to Main Page</a>
 </body>
 </html>
