Rewrite with Bootstrap

--- a/about/index.html
+++ b/about/index.html
@@ -1,34 +1,74 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/about.css">
-    <link href="../css/all.css" rel="stylesheet">
-    <title>About Sakurai Kaede</title>
-</head>
-<body>
-    <div class="main">
-        <h1 class="title">✨About Sakurai Kaede✨</h1>
-        <div class="list">
-            <ul>
-               <li>📜 A High School Freshman</li>
-                <li>🎂 2005.02.21</li>
-                <li>🎮 Ingress <span style="color: seagreen;">ENL</span></li>
-                <li>🐱 Probably a cat,meow!</li>
-                <li>📖 Studying HTML and Python</li>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/39c90bc0ef.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>About Sakurai Kaede-Kaede's Personal Page</title>
+  </head>
+  <body style="background-color:#e9ecef;">
+    <div class="d-flex flex-column" style="min-height:100vh">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container-xxl">
+        <span class="navbar-brand mb-0 h1" href="#">Kaede's Personal Page</span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-globe"></i> Language
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item active" href="#">English</a></li>
+                <li><a class="dropdown-item" href="#">简体中文</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="d-flex container align-items-center justify-content-center flex-column" style="flex: 1;">
+        <div class="card text-center" style="width: auto;">
+            <div class="card-body">
+                <p class="card-text">
+                    ✨About Sakurai Kaede✨<br>
+                    📜 A High School Freshman<br>
+                    🎂 Feb 21 (Now 16 y.o)<br>
+                    🎮 Ingress ENL<br>
+                    🐱 Probably a cat,meow!<br>
+                    📖 Studying HTML and Python<br>
+                </p>
+            </div>
+            <ul class="list-group list-group-flush">
+            </ul>
+            <div class="card-body">
+                <p class="card-text">
+                    Where you can find me:<br>
+                </p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><span style="color: #00acee;"><i class="fab fa-twitter"></i></span> Twitter: <a href="https://twitter.com/5akurai_kaede">@5akurai_kaede</a></li>
+                <li class="list-group-item"><span style="color: #0088cc;"><i class="fab fa-telegram"></i></span> Telegram: <a href="https://t.me/sakurai_kaede">@sakurai_kaede</a></li>
+                <li class="list-group-item"><span style="color: black;"><i class="fab fa-github"></i></span> Github: <a href="https://github.com/sakuraikaede">sakuraikaede</a></li>
+                <li class="list-group-item">📧 E-Mail: <a href="mailto:moe@sakurai.in">moe@sakurai.in</a></li> 
             </ul>
         </div>
-        <h1 style="font-size: 27px;">Where you can find me:</h1>
-        <div class="list">
-            <ul>
-                <li><span style="color: #00acee;"><i class="fab fa-twitter"></i></span> Twitter: <a href="https://twitter.com/5akurai_kaede">@5akurai_kaede</a></li>
-                <li><span style="color: #0088cc;"><i class="fab fa-telegram"></i></span> Telegram: <a href="https://t.me/sakurai_kaede">@sakurai_kaede</a></li>
-                <li><span style="color: black;"><i class="fab fa-github"></i></span> Github: <a href="https://github.com/sakuraikaede">sakuraikaede</a></li>
-                <li>📧 E-Mail: <a href="mailto:moe@sakurai.in">moe@sakurai.in</a></li>
-            </ul>
-        </div>
-        <a href="../" style="font-size: 20px;">Back to Main Page</a>
+        <a href="../" class="btn btn-outline-primary" role="button" style="margin: 10px;">Back to home page</a>
     </div>
-</body>
+  <nav class="navbar navbar-light fixed-bottom">
+      <div class="container-fluid justify-content-center">
+        <span class="navbar-text ">
+          <a href="https://icp.gov.moe" target="_blank" style="color: rgba(0,0,0,.55);">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20216655" target="_blank" style="color: rgba(0,0,0,.55);"> 20216655号</a>
+          <br>
+          ©2021 Sakurai Kaede
+        </span>
+      </div>
+  </nav>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  </body>
 </html>
