--- a/zh-hans/about/index.html
+++ b/zh-hans/about/index.html
@@ -6,14 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/39c90bc0ef.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <title>OpenPGP Key of Sakurai Kaede-Kaede's Personal Page</title>
+    <title>关于樱井枫-枫的个人页</title>
   </head>
   <body style="background-color:#e9ecef;">
     <div class="d-flex flex-column" style="min-height:100vh">
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-xxl">
-        <span class="navbar-brand mb-0 h1" href="#">Kaede's Personal Page</span>
+        <span class="navbar-brand mb-0 h1" href="#">枫的个人页</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,30 +20,45 @@
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fas fa-globe"></i> Language
+                <i class="fas fa-globe"></i> 语言/Language
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item active" href="#">English</a></li>
-                <li><a class="dropdown-item" href="#">简体中文</a></li>
+                <li><a class="dropdown-item" href="#">English</a></li>
+                <li><a class="dropdown-item active" href="#">简体中文</a></li>
               </ul>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-  <div class="d-flex flex-column align-items-center justify-content-center" style="flex: 1;">
-    <br>
-    <div class="card">
-        <div class="card-body">
-            <p class="card-text">
-                If you are using GnuPG, you can type this in your shell:<br><code>gpg --keyserver hkps://keys.openpgp.org --recv-keys 9EC815BB7174B081</code><br>
-                Key-ID: <code>9EC8 15BB 7174 B081</code><br>
-                Fingerprint: <code>0BF7 21C0 395D AAE1 6E9B 0E70 9EC8 15BB 7174 B081</code>
-            </p>
+    <div class="d-flex container align-items-center justify-content-center flex-column" style="flex: 1;">
+        <div class="card text-center" style="width: auto;">
+            <div class="card-body">
+                <p class="card-text">
+                    ✨关于樱井枫✨<br>
+                    📜 高中一年生<br>
+                    🎂 2月21日 （现在16岁）<br>
+                    🎮 Ingress 启蒙军<br>
+                    🐱 可能是一只猫猫，喵！<br>
+                    📖 在学 HTML 和 Python<br>
+                </p>
+            </div>
+            <ul class="list-group list-group-flush">
+            </ul>
+            <div class="card-body">
+                <p class="card-text">
+                    在哪里可以找到我：<br>
+                </p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><span style="color: #00acee;"><i class="fab fa-twitter"></i></span> Twitter: <a href="https://twitter.com/5akurai_kaede">@5akurai_kaede</a></li>
+                <li class="list-group-item"><span style="color: #0088cc;"><i class="fab fa-telegram"></i></span> Telegram: <a href="https://t.me/sakurai_kaede">@sakurai_kaede</a></li>
+                <li class="list-group-item"><span style="color: black;"><i class="fab fa-github"></i></span> Github: <a href="https://github.com/sakuraikaede">sakuraikaede</a></li>
+                <li class="list-group-item">📧 E-Mail: <a href="mailto:moe@sakurai.in">moe@sakurai.in</a></li> 
+            </ul>
         </div>
+        <a href="../" class="btn btn-outline-primary" role="button" style="margin: 10px;">Back to home page</a>
     </div>
-    <a href="../" class="btn btn-outline-primary" role="button" style="margin: 10px;">Back to home page</a>
-  </div>
   <nav class="navbar navbar-light fixed-bottom">
       <div class="container-fluid justify-content-center">
         <span class="navbar-text ">
@@ -54,7 +68,6 @@
         </span>
       </div>
   </nav>
-    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
