--- a/zh-hans/openpgp/index.html
+++ b/zh-hans/openpgp/index.html
@@ -7,13 +7,13 @@
     <script src="https://kit.fontawesome.com/39c90bc0ef.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>OpenPGP Key of Sakurai Kaede-Kaede's Personal Page</title>
+    <title>樱井枫的 OpenPGP 公钥-枫的个人页</title>
   </head>
   <body style="background-color:#e9ecef;">
     <div class="d-flex flex-column" style="min-height:100vh">
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-xxl">
-        <span class="navbar-brand mb-0 h1" href="#">Kaede's Personal Page</span>
+        <span class="navbar-brand mb-0 h1" href="#">枫的个人页</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,11 +21,11 @@
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fas fa-globe"></i> Language
+                <i class="fas fa-globe"></i> 语言/Language
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item active" href="#">English</a></li>
-                <li><a class="dropdown-item" href="#">简体中文</a></li>
+                <li><a class="dropdown-item" href="/">English</a></li>
+                <li><a class="dropdown-item active" href="/zh-hans/">简体中文</a></li>
               </ul>
             </li>
           </ul>
@@ -37,13 +37,13 @@
     <div class="card">
         <div class="card-body">
             <p class="card-text">
-                If you are using GnuPG, you can type this in your shell:<br><code>gpg --keyserver hkps://keys.openpgp.org --recv-keys 9EC815BB7174B081</code><br>
+                如果你在使用 GnuPG，你可以在你的终端里输入：<br><code>gpg --keyserver hkps://keys.openpgp.org --recv-keys 9EC815BB7174B081</code><br>
                 Key-ID: <code>9EC8 15BB 7174 B081</code><br>
-                Fingerprint: <code>0BF7 21C0 395D AAE1 6E9B 0E70 9EC8 15BB 7174 B081</code>
+                指纹: <code>0BF7 21C0 395D AAE1 6E9B 0E70 9EC8 15BB 7174 B081</code>
             </p>
         </div>
     </div>
-    <a href="../" class="btn btn-outline-primary" role="button" style="margin: 10px;">Back to home page</a>
+    <a href="../" class="btn btn-outline-primary" role="button" style="margin: 10px;">返回主页</a>
   </div>
   <nav class="navbar navbar-light fixed-bottom">
       <div class="container-fluid justify-content-center">
