--- a/openpgp/index.html
+++ b/openpgp/index.html
@@ -25,7 +25,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item active" href="#">English</a></li>
-                <li><a class="dropdown-item" href="#">简体中文</a></li>
+                <li><a class="dropdown-item" href="/zh-hans/openpgp/">简体中文</a></li>
               </ul>
             </li>
           </ul>
