--- a/zh-hans/about/index.html
+++ b/zh-hans/about/index.html
@@ -23,7 +23,7 @@
                 <i class="fas fa-globe"></i> 语言/Language
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">English</a></li>
+                <li><a class="dropdown-item" href="/about/">English</a></li>
                 <li><a class="dropdown-item active" href="#">简体中文</a></li>
               </ul>
             </li>
