--- a/zh-hans/openpgp/index.html
+++ b/zh-hans/openpgp/index.html
@@ -24,8 +24,8 @@
                 <i class="fas fa-globe"></i> 语言/Language
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="/">English</a></li>
-                <li><a class="dropdown-item active" href="/zh-hans/">简体中文</a></li>
+                <li><a class="dropdown-item" href="/openpgp/">English</a></li>
+                <li><a class="dropdown-item active" href="#">简体中文</a></li>
               </ul>
             </li>
           </ul>
