--- a/about/index.html
+++ b/about/index.html
@@ -36,8 +36,8 @@
             <div class="card-body">
                 <p class="card-text">
                     ✨About Sakurai Kaede✨<br>
-                    📜 A High School Freshman<br>
-                    🎂 Feb 21 (Now 16 y.o)<br>
+                    📜 A High School Student<br>
+                    🎂 Feb 21 (Now 17 y.o)<br>
                     🎮 Ingress ENL<br>
                     🐱 Probably a cat,meow!<br>
                     📖 Studying HTML and Python<br>
