--- a/zh-hans/about/index.html
+++ b/zh-hans/about/index.html
@@ -36,8 +36,8 @@
             <div class="card-body">
                 <p class="card-text">
                     ✨关于樱井枫✨<br>
-                    📜 高中一年生<br>
-                    🎂 2月21日 （现在16岁）<br>
+                    📜 高中二年生<br>
+                    🎂 2月21日 （现在17岁）<br>
                     🎮 Ingress 启蒙军<br>
                     🐱 可能是一只猫猫，喵！<br>
                     📖 在学 HTML 和 Python<br>
